# InvestmentScenGeneration

./: docker-compose.override.yml  docker-compose.yml
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/: .dockerignore  .filebrowser.json  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt  stock.conf
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/about/: about.json  about.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/historyTime/: historyTime.csv  historyTime.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/klines/: klines.csv  klines.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/most-similar/: most-similar.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/related/: related.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/stockPrice/: stockPrice.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/algorithm/unrelated/: unrelated.csv  unrelated.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/change/: factor.txt  会议记录.txt
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/cron-algorithm/update_stock_csv/: update_stock_csv.py
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/src/: error.rs  init.rs  main.rs  utils.rs
Services/Business/InvestmentScenGeneration/stock-backend-raw-main/www/: index.html
(+293 files in other folders)
