[package]
name = "stock-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
poll = []

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
mongodb = { version = "2.3.1" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.17", features = ["auto-initialize"] }
serde_json = "1.0"
actix-web = "4"
futures = "0.3"
log = "0.4.0"
env_logger = "0.9.0"
toml = "0.5.10"
walkdir = "2.3.2"
sha256 = "1.1.1"
derive_more = "0.99.17"
notify = { version = "5.1.0" }
once_cell = "1.17.0"
libc = "0.2"
